<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Wprowadź tytuł sprawy:</string>
    <string name="crime_title_label">Tytuł</string>
    <string name="crime_details_label">Opis</string>
    <string name="crime_solved_label">Rozwiązana</string>
    <string name="crime_title">Tytuł sprawy</string>
    <string name="crime_date">Data</string>
    <string name="police_contact">Skontaktuj się z policją</string>
    <string name="date_picker_title">Data przestępstwa:</string>
    <string name="new_crime">Nowe przestępstwo</string>
    <string name="show_subtitle">Pokaż podtytuł</string>
    <string name="hide_subtitle">Ukryj podtytuł</string>
    <string name="subtitle_format">%1$d przestępstw</string>
    <string name="crime_suspect">Wybierz podejrzanego</string>
    <string name="crime_report_button">Wyślij raport o przestępstwie</string>
    <string name="crime_report">%1$s!
        Przestępstwo zostało ujawnione w dniu %2$s. %3$s, i %4$s
    </string>
    <string name="crime_report_solved">Sprawa rozwiązana</string>
    <string name="crime_report_unsolved">Sprawa nierozwiązana</string>
    <string name="crime_report_no_suspect">Brak podejrzanego.</string>
    <string name="crime_report_suspect">Podejrzany to %s.</string>
    <string name="crime_report_subject">CriminalIntent — raport o przestępstwie</string>
    <string name="send_report">Wyślij raport za pomocą</string>
    <string name="date_format">yyyy-MM-dd hh:mm:ss</string>
    <string name="crime_photo_button_description">Zrób zdjęcie popełnienia przestępstwa</string>
    <string name="crime_photo_no_image_description">Brak zdjęcia przestępstwa</string>
    <string name="crime_photo_image_description">Zdjęcie przestępstwa</string>
</resources>
